--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'France -- History -- Consulate and First Empire, 1799-1815'
 - !lcc 'DC'
 - !lcsh 'Napoleon I, Emperor of the French, 1769-1821'
+- GITenberg
 title: The Life of Napoleon Bonaparte. Vol. 3 (of 4)
 url: http://www.gutenberg.org/ebooks/27289
